// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/progress/demo/circle.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#ff5500"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="check"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474c-6.1-7.7-15.3-12.2-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-dynamic.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="0"
          style="stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-minus"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="minus"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-plus"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="plus"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-mini.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:88.59291283123217px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#ff5500"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="check"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474c-6.1-7.7-15.3-12.2-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dashboard.md correctly 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width:120px;height:120px;font-size:24px"
  >
    <svg
      class="ant-progress-circle "
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke="#f3f3f3"
        stroke-width="6"
        style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke="#108ee9"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
      />
    </svg>
    <span
      class="ant-progress-text"
    >
      75%
    </span>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dynamic.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:0%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-minus"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="minus"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-plus"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="plus"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/format.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75 Days
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        Done
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:30%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:50%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:70%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:100%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:50%;height:8px;border-radius:100px"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line-mini.md correctly 1`] = `
<div
  style="width:170px"
>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-small"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:30%;height:6px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-small"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:50%;height:6px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-small"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:70%;height:6px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-small"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:100%;height:6px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check-circle"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/linecap.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:75%;height:8px;border-radius:0"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="square"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="square"
          stroke-width="6"
          style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75%
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/segment.md correctly 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:60%;height:8px;border-radius:100px"
        />
        <div
          class="ant-progress-success-bg"
          style="width:30%;height:8px;border-radius:100px"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      60%
    </span>
  </div>
</div>
`;
